location map updates

--- a/src/components/garage-list/garage-list.scss
+++ b/src/components/garage-list/garage-list.scss
@@ -91,7 +91,9 @@
         }
         .garage-dp {
           width: 45px;
+          min-width: 45px;
           height: 45px;
+          min-height: 45px;
           border-radius: 50%;
           object-fit: cover;
         }
