--- a/src/components/rental-form/rental-form.html
+++ b/src/components/rental-form/rental-form.html
@@ -50,6 +50,19 @@
             <Select :options="utils.emiratesLocationList()" :error="newRentalValidation.place" errorText="Select Location"
               placeholder="Select Location" @selectValue="updateRentalData('place', $event)" :selected="newRental.place" />
               </div>
+              <div class="col-12 mb-3">
+                <label>Location Map <span class="map-instructions" role="button" @click="showLocationInstructions">How To Get Map?</span></label>
+                <!-- prettier-ignore -->
+                <TextArea
+                  class="inputText"
+                  placeholder="Enter Location Map"
+                  :error="newRentalValidation.locationMap"
+                  errorText="Enter Valid Location Map"
+                  @value="updateRentalData('locationMap', $event)"
+                  id="locationMap"
+                  :value="newRental.locationMap"
+                />
+              </div>
             <div class="col-12 mb-3 mt-3">
               <label>Price <span>*</span></label>
               <!-- prettier-ignore -->
@@ -283,5 +296,11 @@
         </div>
       </div>
     </div>
+    <LocationMapInstructions
+    class="medium"
+    v-if="showLocationModal"
+    @close="closeReviewModal"
+  />
   </div>
+  
 </div>
