--- a/src/views/store-profile/store-profile.html
+++ b/src/views/store-profile/store-profile.html
@@ -1,1 +1,1 @@
-<SellerProfile :type="getPageType" :id="getPostId" />
+<SellerProfile :type="getPageType" :id="getPostId" :userType="getUserType" />
