--- a/src/views/super-dashboard/super-dashboard.html
+++ b/src/views/super-dashboard/super-dashboard.html
@@ -15,7 +15,11 @@
     </div>
     <div class="col-12 mb-md-5 mb-3 mt-3 p-md-0">
       <ul class="nav nav-tabs w-100" v-if="page == 'classifieds'">
-        <li class="nav-item" v-for="item in classifiedsCategoryList">
+        <li
+          class="nav-item"
+          role="button"
+          v-for="item in classifiedsCategoryList"
+        >
           <a
             class="nav-link"
             :class="item.id==type && 'active'"
@@ -25,7 +29,7 @@
         </li>
       </ul>
       <ul class="nav nav-tabs w-100" v-else-if="page == 'spare-parts'">
-        <li class="nav-item" v-for="item in spareCategoryList">
+        <li class="nav-item" role="button" v-for="item in spareCategoryList">
           <a
             class="nav-link"
             :class="item.id==type && 'active'"
@@ -35,7 +39,7 @@
         </li>
       </ul>
       <ul class="nav nav-tabs w-100" v-else-if="page == 'garages'">
-        <li class="nav-item" v-for="item in garageCategoryList">
+        <li class="nav-item" role="button" v-for="item in garageCategoryList">
           <a
             class="nav-link"
             :class="item.id==type && 'active'"
