--- a/src/components/lease-form/lease-form.scss
+++ b/src/components/lease-form/lease-form.scss
@@ -6,6 +6,19 @@
     div[class*="col-12"] {
       > label {
         font-weight: 800;
+        width: 100%;
+      }
+    }
+
+    label {
+      span {
+        color: $red;
+        &.map-instructions {
+          float: right;
+          text-decoration: underline;
+          text-transform: uppercase;
+          font-size: 12px;
+        }
       }
     }
 
