--- a/src/components/seller-profile/seller-profile.scss
+++ b/src/components/seller-profile/seller-profile.scss
@@ -6,6 +6,11 @@
       border-radius: 50%;
       border: 1px dashed $purple;
       box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.1);
+      max-width: 200px;
+      max-height: 200px;
+      min-width: 200px;
+      min-height: 200px;
+      object-fit: cover;
     }
     .social-wrapper {
       display: flex;
@@ -88,6 +93,10 @@
       text-align: center;
       img {
         max-width: 100px;
+        max-height: 100px;
+        min-width: 100px;
+        min-height: 100px;
+        object-fit: cover;
       }
       .phone {
         width: 100%;
