--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -133,7 +133,7 @@
       </div>
       <div class="col-12 col-lg-4">
         <div class="shadow-container right p-3 mb-3">
-          <div class="dealer-logo mb-4 mt-2 flex-column align-items-center"  @click="openStore(leaseData.postedBy)">
+          <div class="dealer-logo mb-4 mt-2 flex-column align-items-center"  @click="openStore(leaseData.postedBy, leaseData.userType)">
             <img
             :src="getDealerLogo(leaseData.dealerLogo, leaseData.imageFolder)"
           />
@@ -201,7 +201,7 @@
 
           <div class="map mt-4">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3610.1786541313772!2d55.27437637712276!3d25.19719697699969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43348a67e24b%3A0xff45e502e1ceb7e2!2sBurj%20Khalifa!5e0!3m2!1sen!2sin!4v1626510499995!5m2!1sen!2sin"
+            :src="leaseData.locationMap"
               width="100%"
               height="350"
               style="border: 0"
