--- a/src/views/lease-a-car/lease-a-car.html
+++ b/src/views/lease-a-car/lease-a-car.html
@@ -1,13 +1,22 @@
 <div class="rental-wrapper container p-0 mb-5 pb-1">
-  <LeaseCategorySelect class="mt-3" v-if="!getSelectedLeaseCategory" />
-  <div class="row p-3" v-if="!getSelectedLeaseCategory">
+  <LeaseCategorySelect
+    class="mt-3"
+    v-if="!currentQuery && !getSelectedLeaseCategory && !getSelectedLeaseBrand"
+  />
+  <div
+    class="row p-3"
+    v-if="!currentQuery && !getSelectedLeaseCategory && !getSelectedLeaseBrand"
+  >
     <div class="col-12">
       <section>
-        <h5>Browse By <span>Brands</span></h5>
+        <h5>Popular <span>Brands</span></h5>
         <div class="brands">
-          <span v-for="index of 20">
-            <img src="../../assets/brand.png" />
-          </span>
+          <div v-for="make in getCarMakes" @click="getLeaseCarList(make)">
+            <span>
+              <img :src="`/img/${formatTitle(make)}.png`" />
+            </span>
+            <p>{{make}}</p>
+          </div>
         </div>
       </section>
     </div>
