--- a/src/views/lease-a-car/lease-a-car.scss
+++ b/src/views/lease-a-car/lease-a-car.scss
@@ -1,29 +1,54 @@
 .rental-wrapper {
   .brands {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 15px;
     flex-wrap: nowrap;
     overflow-x: auto;
     scroll-behavior: smooth;
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 15px;
+      cursor: pointer;
+
+      span {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid $purple;
+        box-sizing: border-box;
+        padding: 10px;
+        border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        img {
+          max-height: 50px;
+          max-width: 50px;
+        }
+      }
+      p {
+        font-weight: 700;
+        text-align: center;
+        line-height: 1;
+        margin-top: 5px;
+        transition: 0.3s ease;
+      }
+
+      &:hover {
+        p {
+          color: $purple;
+        }
+      }
+    }
     &::-webkit-scrollbar {
       width: 0;
       height: 0;
       display: none;
       background: transparent;
-    }
-    span {
-      margin-right: 15px;
-      display: inline-flex;
-      flex-direction: column;
-      align-items: center;
-      border: 1px solid $purple;
-      box-sizing: border-box;
-      padding: 10px;
-      border-radius: 50%;
-      img {
-        max-height: 50px;
-      }
     }
   }
   @media screen and (max-width: 991px) {
